# trading

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml  requirements.txt
src/trading/: main.py
src/trading/analysis/: first_qwen.py
src/trading/base_data/: __init__.py  pricedata.py  test_hist.py
src/trading/models/: security_price.py
